# ChangeLog for net-im/kadu-history
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-history-0.6.5.4_rc1.ebuild:
  Removed Kadu 0.6.5.4_rc1.

*kadu-history-0.6.5.4_rc2-r1 (12 Jan 2010)

  12 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-history-0.6.5.4_rc2-r1.ebuild, +files/fix-history-crash.patch:
  Bumped with patch to fix crash, as reported here:
  http://www.kadu.net/forum/viewtopic.php?f=2&t=10268

*kadu-history-0.6.5.4_rc2 (01 Jan 2010)

  01 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-history-0.6.5.4_rc2.ebuild:
  Bumped.

  11 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-history-0.6.5.4_rc1.ebuild:
  Bumped.

  04 Oct 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-history-0.6.0.3.ebuild:
  Removing Kadu 0.6.0.* ebuilds.

  14 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-history-0.6.5.2.ebuild, +kadu-history-0.6.5.3.ebuild:
  Bumped.

  03 May 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-history-0.6.5.1.ebuild, +kadu-history-0.6.5.2.ebuild:
  Bumped. Removed previous version.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  kadu-history-0.6.0.3.ebuild, -kadu-history-0.6.5.ebuild,
  +kadu-history-0.6.5.1.ebuild, +metadata.xml:
  Bumped. Removed previous version. Some repoman fixes.

  01 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-history-0.6.0.2.ebuild, +kadu-history-0.6.0.3.ebuild:
  Bumped. Removed previous version.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-history-0.6.5_rc2.ebuild, +kadu-history-0.6.5.ebuild:
  Bumped. Removed previous version.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-history-0.6.5_rc2.ebuild:
  Bumped.

  07 Aug 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-history-0.6.0.1.ebuild:
  Removed cruft.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-history-0.6.0.2.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-history-0.6.0.ebuild:
  Removed cruft.
