@@ -4,7 +4,6 @@ DIST kadu-0.6.5.4-rc2.tar.bz2 1764699 RMD160 da10c176ec0ee96986210183a43ede40c99
 DIST kadu-0.6.5.4-rc3.tar.bz2 1750341 RMD160 d9535f709957270e72698300f557f08a4f8191ac SHA1 2b65bf09e8951ff38607f7bb08e7019d8334b933 SHA256 1bf9cf8f6c4038339dd58896c8338b5a7321631791218093c386adb7d0328781
 EBUILD kadu-history-0.6.5.3.ebuild 243 RMD160 3062a5bd494be5fd327aa291a23df8d0db4fc46c SHA1 7dc77c60e683a2f2c89ea9ab24fa109827b9dca3 SHA256 84ed8ae690d7dcdb0a863586fb1cb27f3e872344e4e1963bffa8397f4290ca1c
 EBUILD kadu-history-0.6.5.4_rc2-r1.ebuild 306 RMD160 a5552505249ad8676124561ef98c7fbd9772019e SHA1 d18c2488b7f0e4ff08fde05acd66cd8ce4ed72c9 SHA256 087aadf7a9334c8e9ddf15b635cf8c88fbd86e4ce816f3cbbc70dbd77b83b4a7
-EBUILD kadu-history-0.6.5.4_rc2.ebuild 268 RMD160 200c9a61f718d456ca65f3e53918e48e8818a115 SHA1 4089b54381aea385f23f8f5aeeec5f8b6be17e05 SHA256 0e5def3a7bcfd8a59ab71decd56d4bfc6b1f38879108c1c3a4e5b5a31119e731
 EBUILD kadu-history-0.6.5.4_rc3.ebuild 268 RMD160 cabb30955ddd9882a472f7c73e0c2c25a9b78bb6 SHA1 9fc4179fac937e044e03e4b009266e8cb862e694 SHA256 658ed6eaa5d54544b609eda2ef3356d508ad0a07d3036b49186949b19870483b
-MISC ChangeLog 2103 RMD160 3d494d4173ba8c0c55b3d261a4fcd88106e0de63 SHA1 cb7ab7762ce8712e81d59efa5457e89826d3da21 SHA256 d439ec048f4c610b7828dd6eb4278e732392cbf8da9dc7312afd3cccd2626ade
+MISC ChangeLog 2206 RMD160 cd88b8870d83325924428890507799b05d61741e SHA1 962f95c36c885c34b63430cb50d5d8da64eb1014 SHA256 e34a63f7ce30c88ae49db47cdfcbf038d7c62bb4ba8213214647e63159ba234d
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
