@@ -1,12 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-MIN_VER="0.6.5.4_rc2"
-
-inherit kadu-base kadu-mod
-
-DESCRIPTION="History module for Kadu"
-HOMEPAGE="http://kadu.net"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
