@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
+  -kadu-history-0.6.5.4_rc2.ebuild:
+  Removed cruft.
+
   16 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
   -kadu-history-0.6.5.4_rc1.ebuild:
   Removed Kadu 0.6.5.4_rc1.
